Project

General

Profile

Actions

Bug #13856

closed

MinGW / mswin intermittent failure in test/socket/test_socket.rb

Bug #13856: MinGW / mswin intermittent failure in test/socket/test_socket.rb

Added by MSP-Greg (Greg L) about 9 years ago. Updated over 8 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.5.0dev (2017-09-11 trunk 59829) [x64-mingw32]
[ruby-core:82602]

Description

Recently, there have been two Appveyor fails, first and second.

Both listed the following as the error:

running file: C:/projects/ruby/test/socket/test_socket.rb

Some worker was crashed. It seems ruby interpreter's bug
or, a bug of test/unit/parallel.rb. try again without -j
option.

I have a similar intermittent error as a silent segfault in MinGW builds. I've attached the patch file I use, it patches the TestSocket#test_closed_read method, and simply adds sock.autoclose = false after sock is created.

I haven't done much Ruby socket coding, so I've never looked into the issue, but the test passes and is stable with the patch. For all I know, the patch may 'end-around' the whole point of the test.

I don't know if this helps identify the real issue or not. If not, feel free to close.


Files

Actions

Also available in: PDF Atom